# lane_tracking_bachelors

./: CMakeLists.txt  README.md  package.xml
launch/: sdc_thesis.launch  sdc_thesis_cam.launch  sdc_thesis_cam.xml  sdc_thesis_video.launch  video_stream_prueba.xml
networking/: connection_script.sh
scripts/: Classificator.py  Edges.py  HaarEdges.py  HaarEdges_v2.py  Lines.py  Lines2.py  Lines_v2.py  Roi_finder.py  Splines.py  lane_model.py  lane_model2.py  lane_model_2.py  lane_model_3.py  lane_model_4.py  point_extractor.py  tracker.py  twist_conv.py
scripts/unused_code/: Classificator.py  Edges.py  HaarEdges.py  HaarEdges_v2.py  Kalman_filter.py  Splines.py  lane_model.py  lane_model_2.py
src/: Edges.cpp  Lines.cpp  Lines2.cpp
